# ConicXX

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.json
benchmarks/: CMakeLists.txt  problem_generators.cpp  problem_generators.h  run_benchmarks.cpp
cmake/: CompilerWarnings.cmake  conicxx-config.cmake.in
examples/: CMakeLists.txt  friction_contact_demo.cpp
include/conicxx/: cone_spec.h  convert.h  settings.h  solution.h  solver.h  types.h  version.h.in
include/conicxx/cones/: cone_base.h  cone_set.h  nonnegative_cone.h  second_order_cone.h  zero_cone.h
src/conicxx/: convert.cpp  solution.cpp  solver.cpp  solver_impl.cpp  solver_impl.h  version.cpp
src/conicxx/cones/: cone_set.cpp  nonnegative_cone.cpp  second_order_cone.cpp  zero_cone.cpp
src/conicxx/kkt/: equilibration.cpp  equilibration.h  kkt_system.cpp  kkt_system.h  qdldl_ldlt.cpp  qdldl_ldlt.h  regularized_ldlt.cpp  regularized_ldlt.h  sparsity_map.cpp  sparsity_map.h
test/: CMakeLists.txt
test/cones/: test_cone_set.cpp  test_nonnegative_cone.cpp  test_second_order_cone.cpp  test_zero_cone.cpp
test/convert/: test_convert.cpp
test/kkt/: test_equilibration.cpp  test_kkt_system.cpp  test_kkt_system_backends.cpp  test_sparsity_map.cpp
test/solver/: test_infeasible.cpp  test_solve_dense_input.cpp  test_solve_friction_qp_soc.cpp  test_solve_lp.cpp  test_solve_qp.cpp  test_solve_socp.cpp  test_update_reuse.cpp
test/utils/: test_helpers.h
test/version/: test_version.cpp
